welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  if (vacation == true && day>=1 && day<=5)
  return "10:00"
  if (vacation == true && day<1 && day>5)
  return "off"
  if (vacation == false && day>=1 && day<=5)
  return "7:00"
  if (vacation == false && day<=1 && day>=5)
  return "10:00"
}
  
  
  
  